--- a/show.html
+++ b/show.html
@@ -13,10 +13,16 @@
         <div class="counter-container" style="margin-top:100px">
             <h1>Counter.</h1>
             <p>You have visited this page</p>
-            <p>1</p>
+            <p>{{counter}}</p>
             <p>time(s).</p>
             <form action="/counter_post" method="POST">
-                <button type="submit" class="button">Refresh</button>
+                <button type="submit" class="button" name="refresh_button" id="refresh_button">Refresh</button>
+            </form>
+            <form action="/counter_post2" method="POST">
+                <button type="submit" class="button" name="add_two" id="add_two">Add Two!</button>
+            </form>
+            <form action="/clear" method="POST">
+                <button type="submit" class="button" name="clear" id="clear">Clear</button>
             </form>
         </div>
     </div>
